nullaway_error_484A7C6B-946B-45A0-9882-F4FAF0B2603D.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-web/src/main/java/org/springframework/web/multipart/support/AbstractMultipartHttpServletRequest.java:143: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return this.multipartFiles;
		^
    (see http://t.uber.com/nullaway )
